kyverno-policies/custom-3.2.3.yaml
../policies/kubernetes/worker-nodes/custom-3.2.3.yaml
